components/SwipeableCards/SwipeableCards.module.scss
.swipeable_cards {
  display: grid;
  place-content: center;
  position: relative;
  touch-action: none;

  .card {
    grid-area: 1 / 1;
    opacity: calc(1 - clamp(0, var(--stack-index0) - var(--visible-stack-length), 1));
    padding-top: calc(var(--card-top-distance, 0) * max((min(var(--stack-length) - 1,var(--visible-stack-length)) - var(--stack-index0)), 0));
    scale: calc(100% - min(var(--stack-index0), var(--visible-stack-length)) * 10%);
    touch-action: none;
    transform-origin: center 0;
    transition: all 0.2s var(--ease-out-cubic);
    transition-property: opacity, scale, padding-top;
  }

  .empty_card {
    display: grid;
    grid-area: 1 / 1;
    opacity: max(1 - var(--stack-length) + 1, 0);
    place-content: center;
    transition: opacity 0.2s var(--ease-out-cubic);
    width: 100%;
  }
}

